force-app/main/default/objects/LogEvent__e/LogEvent__e.object-meta.xml
<CustomObject>
    <description>Logger Events</description>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>