force-app/main/default/objects/LogEvent__e/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>