force-app/main/default/objects/LogEvent__e/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <label>Log Level</label>
    <length>5</length>
    <type>Text</type>
</CustomField>