force-app/main/default/objects/LogEvent__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The message thrown by the Logger</description>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>