force-app/main/default/objects/LogEvent__e/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <label>StackTrace</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>